load("@bazel_gazelle//:def.bzl", "gazelle")

# Generate the .pb.go files ahead of time and using those .go files exclusively
# instead of using go_proto_library. This may be a better option for established
# Go projects that also need to build with go build.
#### gazelle:proto disable_global

##### gazelle:prefix github.com/abitofhelp/abohapis
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        #"-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto go google/rpc/status.proto  @org_golang_google_genproto//googleapis/rpc/status
# gazelle:resolve proto google/longrunning/operations.proto @googleapis//google/longrunning:operations_proto
# gazelle:resolve proto go google/longrunning/operations.proto @org_golang_google_genproto//googleapis/longrunning
