module(
    name = "abohapis",
    version = "0.0.1"
)

bazel_dep(name = "gazelle", version = "0.33.0")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# Download an SDK for the host OS & architecture.
go_sdk.download(
    version = "1.21.3",
    goarch = "amd64",
    goos = "darwin",
)
go_deps = use_extension("//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# Register the Go SDK installed on the host.
go_sdk.host()



#GOOGLE_APIS_VERSION = "64926d52febbf298cb82a8f472ade4a3969ba922"

#bazel_dep(name = "com_google_googleapis", version = GOOGLE_APIS_VERSION)
#archive_override(
#    module_name = "com_google_googleapis",
#    integrity = "sha256-nRqTDnZ8k8glOYuPhpLso/41O5qq3t+88fyiKCyF34g=",
#    patch_strip = 1,
#    patches = [
#        "add_bzlmod_support.patch"
#    ],
#    strip_prefix = "googleapis-" + GOOGLE_APIS_VERSION,
#    urls = [
#        "https://github.com/googleapis/googleapis/archive/%s.zip" % GOOGLE_APIS_VERSION
#    ],
#)

#switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
#switched_rules.use_languages()
#use_repo(switched_rules, "com_google_googleapis_imports")



#switched_rules = use_extension("//:extensions.bzl", "switched_rules")
#switched_rules.use_languages(
#    cc = True,
#    csharp = True,
#    gapic = True,
#    go = True,
#    grpc = True,
#    java = True,
#    nodejs = True,
#    php = True,
#    python = True,
#    ruby = True,
#)
#use_repo(switched_rules, "com_google_googleapis_imports")