module(
    name = "abohapis",
    version = "0.0.1"
)

#bazel_dep(name = "gazelle", version = "0.33.0")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# Download an SDK for the host OS & architecture.
go_sdk.download(
    version = "1.21.3",
    goarch = "amd64",
    goos = "darwin",
)
go_deps = use_extension("//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# Register the Go SDK installed on the host.
go_sdk.host()