load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "myapp_lib",
    srcs = ["myapp.go"],
    importpath = "gitlab.com/abitofhelp/abohapis/cmd",
    visibility = ["//visibility:private"],
    deps = [],
)

go_binary(
    name = "myapp",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd_lib",
    srcs = ["myapp.go"],
    importpath = "github.com/abitofhelp/abohapis/cmd",
    visibility = ["//visibility:private"],
)
