load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["myapp.go"],
    importpath = "github.com/abitofhelp/abohapis/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["myapp_test.go"],
    embed = [":cmd_lib"],
    deps = [],
    #["@com_github_stretchr_testify//assert:go_default_library"],
)
