load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "abohapis_proto",
    srcs = ["access_tier.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "abohapis_go_proto",
    importpath = "github.com/abitofhelp/abohapis",
    proto = ":abohapis_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "abohapis",
    embed = [":abohapis_go_proto"],
    importpath = "github.com/abitofhelp/abohapis",
    visibility = ["//visibility:public"],
)
