load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "abitofhelp_enum_v5_proto",
    srcs = ["access_tier.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "abitofhelp_enum_v5_go_proto",
    importpath = "github.com/abitofhelp/abohapis/proto/abitofhelp/enum/v5",
    proto = ":abitofhelp_enum_v5_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "enum",
    embed = [":abitofhelp_enum_v5_go_proto"],
    importpath = "github.com/abitofhelp/abohapis/proto/abitofhelp/enum/v5",
    visibility = ["//visibility:public"],
)
