load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "abohapis_proto",
    srcs = ["blob.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/abitofhelp/enum/v5:abohapis_proto"],  #v5_proto"],
)

go_proto_library(
    name = "abohapis_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/abitofhelp/abohapis",
    proto = ":abohapis_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/abitofhelp/enum/v5:abohapis_go_proto"],  #access_tier_proto"],
)

go_library(
    name = "abohapis",
    embed = [":abohapis_go_proto"],
    importpath = "github.com/abitofhelp/abohapis",
    visibility = ["//visibility:public"],
)
