load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "abitofhelp_api_blob_v5_proto",
    srcs = ["blob.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/abitofhelp/enum/v5:abitofhelp_enum_v5_proto"],
)

go_proto_library(
    name = "abitofhelp_api_blob_v5_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/abitofhelp/abohapis/proto/abitofhelp/api/blob/v5",
    proto = ":abitofhelp_api_blob_v5_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/abitofhelp/enum/v5:enum"],
)

go_library(
    name = "blob",
    embed = [":abitofhelp_api_blob_v5_go_proto"],
    importpath = "github.com/abitofhelp/abohapis/proto/abitofhelp/api/blob/v5",
    visibility = ["//visibility:public"],
)
